--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Document</title>
+    <title>remoteloop</title>
     <style>
         body,
         html {
@@ -15,17 +15,54 @@
             position: fixed;
         }
 
+        #input {
+            opacity: 0;
+            width: 0;
+            overflow: hidden;
+            position: absolute;
+        }
+
         #trackpad {
             width: 100vw;
             height: 100vh;
-            background: grey;
+            background: #283048;
+            background: linear-gradient(to left, #859398, #283048);
+            box-shadow: inset 0px 0 20px #30384f, inset 0 0 50px #ffffff;
+        }
+
+        #toggle-keyboard {
+            margin: 0 auto;
+            display: block;
+            padding: 5px 20px;
+            border: none;
+            border-radius: 0 0 5px 5px;
+            background: white;
+        }
+
+        #toggle-keyboard i {
+            border: solid black;
+            border-width: 0 3px 3px 0;
+            display: inline-block;
+            padding: 3px;
+        }
+
+        #toggle-keyboard .up {
+            transform: rotate(-135deg);
+        }
+
+        #toggle-keyboard .down {
+            transform: rotate(45deg);
         }
     </style>
 </head>
 
 <body>
-    <div id="trackpad"></div>
-
+    <input id="input" />
+    <div id="trackpad">
+        <button id="toggle-keyboard">
+            <i class="up"></i>
+        </button>
+    </div>
     <script src="../src/index.js"></script>
 </body>
 
