add: multi-language keyboard support.

--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -25,8 +25,8 @@
         #trackpad {
             width: 100vw;
             height: 100vh;
-            background: #283048;
-            background: linear-gradient(to left, #859398, #283048);
+            background: #606c88;
+            background: linear-gradient(to right, #3f4c6b, #606c88);
             box-shadow: inset 0px 0 20px #30384f, inset 0 0 50px #ffffff;
         }
 
@@ -58,7 +58,7 @@
 
 <body>
     <input id="input" />
-    <div id="trackpad">
+    <div tabindex="-1" id="trackpad">
         <button id="toggle-keyboard">
             <i class="up"></i>
         </button>
