fix: special keys (backspace + enter) && refactor

--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="./manifest.webmanifest">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>remoteloop</title>
     <style>
@@ -31,8 +31,12 @@
         }
 
         #toggle-keyboard {
-            margin: 0 auto;
-            display: block;
+            position: absolute;
+            width: 50%;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
             padding: 5px 20px;
             border: none;
             border-radius: 0 0 5px 5px;
@@ -58,12 +62,11 @@
 
 <body>
     <input id="input" />
-    <div tabindex="-1" id="trackpad">
-        <button id="toggle-keyboard">
-            <i class="up"></i>
-        </button>
-    </div>
-    <script src="../src/index.js"></script>
+    <button tabindex="0" id="toggle-keyboard">
+        <i class="up"></i>
+    </button>
+    <div tabindex="1" id="trackpad" />
+    <script src="./index.js"></script>
 </body>
 
 </html>
